fix: harden ScriptsTool with upstream's safety fixes
Ours silently won the "scripts" name collision but had regressed
several things upstream's now-deleted GhidraScriptsTool got right:
write/delete allowed path traversal outside the user script dir,
delete had no confirm gate, write always clobbered without an
overwrite flag, list only scanned one script directory with no
pagination, and read had no size cap. Ported those fixes in while
keeping our action names, write's code/category/description params,
and the LLM-workflow description.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NMhTS5Vz3oDYvnbshjWzyF